# hk

./: Cargo.toml  README.md  hk.pkl  hk.usage.kdl  lefthook.yml  mise.toml
.github/workflows/: release.yml
docs/: configuration.md  environment_variables.md  getting_started.md  mise_integration.md
docs/.vitepress/: config.mts
docs/cli/: cache.md  commands.json  config.md  generate.md  index.md  install.md  run.md  version.md
docs/cli/run/: pre-commit.md  pre-push.md
docs/public/: hk@0.1.0  hk@0.1.0.sha256  hk@0.1.0.zip.sha256  hk@0.1.6  hk@0.1.6.sha256  hk@0.1.6.zip.sha256
mise-tasks/: package-pkl.sh
pkl/: PklProject  builtins.pkl  hk.pkl
src/: config.rs  env.rs  git.rs  glob.rs  logger.rs  main.rs  settings.rs  step.rs  step_scheduler.rs  tera.rs
src/cli/: config.rs  generate.rs  init.rs  install.rs  mod.rs  pre_commit.rs  version.rs
src/cli/cache/: mod.rs
src/cli/run/: mod.rs  pre_commit.rs  pre_push.rs
src/ui/: style.rs
test/: test.bats
