[package]
name = "hk"
version = "0.1.4"
edition = "2021"
description = "A tool for managing git hooks"
license = "MIT"
repository = "https://github.com/jdx/hk"
documentation = "https://hk.jdx.dev"
homepage = "https://hk.jdx.dev"
include = ["src/**/*.rs", "Cargo.toml", "Cargo.lock", "README.md", "LICENSE", "pkl"]

[dependencies]
chrono = "0.4"
clap = { version = "4", features = ["derive"] }
console = "0.15"
dirs = "6"
duct = "0.13"
ensembler = "0.1"
git2 = "0.20"
globset = "0.4"
indexmap = { version = "2", features = ["serde"] }
itertools = "0.14"
log = "0.4"
miette = { version = "7", features = ["fancy", "syntect-highlighter"] }
rpkl-jdx = "0.4"
serde = { version = "1", features = ["derive"] }
serde_with = "3"
serde_yaml = "0.9"
serde_json = "1"
tera = "1"
thiserror = "2"
tokio = { version = "1", features = ["full", "rt-multi-thread"] }
toml = "0.8"
xx = { version = "2", features = ["http", "hash", "rustls"] }
strum = { version = "0.26", features = ["derive"] }
clx = "0.1.0"
semver = "1.0.25"
